# uukaimyo-generator

./: CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project.freeze  uukaimyo-generator.cabal
.github/workflows/: build.yml  format.yml  test.yml
app/: Main.hs
src/Data/: UUKaimyo.hs
test/Data/: UUKaimyoSpec.hs
