cabal-version:      2.4
name:               uukaimyo-generator
version:            0.1.0.0
author:             kurubushi
maintainer:         krbshi@gmail.com
extra-source-files:
  LICENSE
  README.md

library
  exposed-modules:  Data.UUKaimyo
  build-depends:
    , base  ^>=4.16.4.0
    , lens  >=5.2      && <6
    , uuid  >=1.3      && <2

  hs-source-dirs:   src
  default-language: Haskell2010

executable uukaimyogen
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.16.4.0
    , optparse-applicative  ^>=0.18.1
    , uuid                  >=1.3      && <2
    , uukaimyo-generator

  hs-source-dirs:   app
  default-language: Haskell2010
